fixed background color overlapping into grid

--- a/client/public/calendar.css
+++ b/client/public/calendar.css
@@ -12,7 +12,7 @@
   .container {
     width: 100%;
     height: 100vh;
-    background-color: #12121f;
+    /* background-color: #12121f; */
     color: #eee;
     display: flex;
     justify-content: center;
